--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,11 @@ about:
   home: https://github.com/mapbox/snuggs
   license: MIT
   summary: 'Snuggs are s-expressions for NumPy.'
+  description: |
+    Snuggs makes simple calculator programs possible.
+  doc_url: https://pypi.python.org/pypi/snuggs
+  doc_source_url: https://github.com/mapbox/snuggs
+  dev_url: https://github.com/mapbox/snuggs
 
 extra:
   recipe-maintainers:
